getAccounts from PortfolioDefinition